Closed Bug 1871493 Opened 1 year ago Closed 1 year ago

Mail alerts whenever any RSS feed get a new post. Want new mail alerts only from actual mail. https://support.mozilla.org/gl/questions/1329269

Categories

(Thunderbird :: Preferences, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115 wontfix, thunderbird124 wontfix)

RESOLVED FIXED
125 Branch
Tracking Status
thunderbird_esr115 --- wontfix
thunderbird124 --- wontfix

People

(Reporter: thunderbird, Assigned: welpy-cw)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:121.0) Gecko/20100101 Firefox/121.0

Steps to reproduce:

"When new messages arrive:" Tick the "Play a sound" box, choose a suitable .wav file.

Actual results:

The .wav file is played whenever email arrives (good!), but it is also played whenever a new item appears in any RSS feed element (not so good).

Expected results:

The .wav file should only be played when email arrives and not when a RSS feed update appears.

As far as I can tell, there have been no version 115 regressions in this area https://mzl.la/3tw05mX.
What is your full version number?
When did this start happening?
Does it also happen after Help > Troubleshoot Mode?

Flags: needinfo?(thunderbird)

Open bug list https://mzl.la/48nLcBQ

Summary: This bug from 2021 was reported fixed, but it seems there has been a regression. I get mail alerts whenever any RSS feed get a new post. I would prefer to only get new mail alerts from actual mail. https://support.mozilla.org/gl/questions/1329269 → Mail alerts whenever any RSS feed get a new post. Want new mail alerts only from actual mail. https://support.mozilla.org/gl/questions/1329269

We see - more exactly: hear - this, too, even despite pref mail.feed.play_sound being at default false, checked here:
https://searchfox.org/comm-central/rev/1cd1ebeaf95fb412c231ec1985aa5c8ad5a431c4/mailnews/base/src/nsStatusBarBiffManager.cpp#83-90
It doesn't seem to happen at startup, only later during the session. What's your pref value for mail.feed.play_sound?

Full version is 115.6.0 (64-bit). The issue began last month when I decided to play a .wav file upon receiving new email. I used a classic "You've Got Mail!" .wav file from the AOL era. /usr/share/sounds/mail.wav: RIFF (little-endian) data, WAVE audio, Microsoft PCM, 16 bit, mono 44100 Hz
I have not tried Troubleshoot Mode. I have only one extension installed: uBlock Origin.
I reviewed my settings, and I have the following configured:
When new messages arrive:
Show an alert (checked)
Use the system notification (checked)
Play a sound (checked)
Use the following sound file (file:///usr/share/sounds/mail.wav) (checked)
Notifications
Send typing notifications in converstations (checked)
when messages directed at you arrive:
Show a notification: with sender's name and message preview (checked)
Play a sound (checked)
Use the following sound file (file:///usr/share/sounds/mail.wav) (checked)

When the RSS feeds update, I get a barrage of audio alerts and the .wav file is played dozens of times, all at once, but with each one slightly time skewed, as a chorus.

This issue could be a result of my misunderstanding of the "When new messages arrive:" feature. Is this feature restricted to email messages, or does it consider RSS content to be "messages" as well?

Flags: needinfo?(thunderbird)

What's your pref value for mail.feed.play_sound?

Sorry, I forgot to provide the requested pref value.
mail.feed.play_sound is "false"

Regressed by bug 1706890 here: https://hg.mozilla.org/comm-central/rev/2142f5b12de0#l2.13
There are two code paths which will play a biff sound:
https://searchfox.org/comm-central/search?q=PlayBiffSound%28NEW_MAIL_PREF_BRANCH%29&path=&case=false&regexp=false
Only the first one protects against playing feed biff sound, the second one added in bug 1706890 doesn't. This patch addressed the issue:
https://github.com/Betterbird/thunderbird-patches/blob/main/115/bugs/1871493-fix-feed-sound.patch

Thank you!

Assignee: nobody → h.w.forms
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → 125 Branch

Pushed by ikey@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/168ce4e71cb4
Don't play sound on new feed message on all code paths. Modernize nsStatusBarBiffManager::PlayBiffSound(). r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: