Bug 1871493 - Don't play sound on new feed message on all code paths. Modernize nsStatusBarBiffManager::PlayBiffSound(). r=mkmelin

Based on https://github.com/Betterbird/thunderbird-patches/blob/main/115/bugs/1871493-fix-feed-sound.patch

Differential Revision: https://phabricator.services.mozilla.com/D202170

--HG--
extra : moz-landing-system : lando